--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -30,5 +30,8 @@
     "**/.next": true,
     "**/node_modules": true,
     "**/next-env.d.ts": true
+  },
+  "files.associations": {
+    "*.css": "tailwindcss"
   }
 }
