--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,7 +28,7 @@
   "files.exclude": {
     "**/.vscode": true,
     "**/.next": true,
-    "**/node_modules": true,
+    "**/node_modules": false,
     "**/next-env.d.ts": true
   },
   "files.associations": {
