--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-plugin-promise": "^7.2.1",
     "eslint-plugin-tailwindcss": "^3.18.2",
     "lucide-react": "^0.539.0",
+    "mongoose": "^8.17.1",
     "next": "15.4.6",
     "next-auth": "^5.0.0-beta.29",
     "next-themes": "^0.4.6",
